<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/network_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/network_type_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <RadioGroup
        android:id="@+id/network_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none_btn_text"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/any_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any_btn_text"/>


        <RadioButton
            android:id="@+id/wifi_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_btn_text"/>

    </RadioGroup>

    <Button
        android:id="@+id/schedule_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:text="@string/schedule_job_btn_text"/>

    <Button
        android:id="@+id/cancel_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:text="@string/cancel_job_btn_text"/>

        <TextView
            android:id="@+id/requires_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/requires_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/idle_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_idle_text"/>


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/charging_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_charging_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/seekBar_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seekBar_label_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>


        <TextView
            android:id="@+id/seekBar_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seekBar_progress_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>

</LinearLayout>